added config server and  central config for student

--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -6,3 +6,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetchRegistry=true
 eureka.instance.hostname=localhost
 server.servlet.context-path=/student
+
+
+spring.profiles.active=local
+spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=*
