adding hystrix and making student service to fetch profile specific configs from config server

--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -8,6 +8,5 @@ eureka.instance.hostname=localhost
 server.servlet.context-path=/student
 
 
-spring.profiles.active=local
+spring.profiles.active=data
 spring.cloud.config.uri=http://localhost:8888
-management.endpoints.web.exposure.include=*
