fix circuit breaker example

--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -9,4 +9,5 @@ server.servlet.context-path=/student
 
 
 spring.profiles.active=data
+management.endpoints.web.exposure.include=hystrix.stream
 spring.cloud.config.uri=http://localhost:8888
