- added gitignore to student service project - merge multiple configuration files into bootstrap

--- a/student-service/src/main/resources/bootstrap.yml
+++ b/student-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,26 @@
 spring:
   profiles:
     active: data
+  cloud:
+    config:
+      uri: http://localhost:8888:management
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  application:
+    name: student-service
+server:
+  servlet:
+    context-path: /student
+  port: 8082
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8080/eureka/
+    fetchRegistry: true
+    register-with-eureka: true
+
