--- a/gateway/src/main/resources/application-test2.yml
+++ b/gateway/src/main/resources/application-test2.yml
@@ -4,6 +4,7 @@
 
 zuul:
   routes:
-    users:
-      path: /student-zuul-server/**
-      serviceId: student-service
+    demo1:
+      path: /fee/v1/**
+      serviceId: FEE-COLLECTOR-SERVICE
+  ignored-services: '*'
