--- a/student-service/src/main/resources/bootstrap.yml
+++ b/student-service/src/main/resources/bootstrap.yml
@@ -1,15 +1,18 @@
 spring:
+  application:
+    name: student-service
   profiles:
     active: data
   cloud:
     config:
-      uri: http://localhost:8888:management
+      uri: http://localhost:8888
+
+management:
   endpoints:
     web:
       exposure:
         include: "*"
-  application:
-    name: student-service
+
 server:
   servlet:
     context-path: /student
